--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,11 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
+/build
 build/Release
 
 # Dependency directories
+/node_modules
 node_modules/
 jspm_packages/
 
@@ -68,9 +70,16 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+# misc
+.DS_Store
+
 # dotenv environment variables file
 .env
 .env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
