--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.0.24",
     "hardhat": "^2.0.5"
+  },
+  "dependencies": {
+    "solc": "^0.6.0"
   }
 }
